update instr manual with all text

--- a/instructors_manual.tex
+++ b/instructors_manual.tex
@@ -48,32 +48,45 @@
 \setcounter{problem}{0}
 \section{Instructor's Preface}
 
-This opening section is a set of notes aimed at an instructor who wishes to use these notes for the first time.
-I have deliberately aimed the discussion at someone who is \emph{new} to using inquiry-based methods in class.
+This opening section is aimed at an instructor who wishes to use these notes for the first time.
+I have deliberately aimed the discussion at someone who is \emph{new} to using inquiry-based methods in class. I have written a lot of this introduction as a description of what I do with these notes, knowing full well that they work for me in this way, but you, dear reader, are a different person.
 More experienced instructors will know what to ignore and adapt things to their own style without much effort.
-I hope newcomers to IBL will appreciate specific instructions about how I run a class from these notes.
+I hope newcomers to inquiry-based learning will appreciate specific instructions about how I run a class from these notes, and take them as a set of suggestions rather than as prescriptions.
 
 Below the reader will find discussion of all of the major components of the course, and how I run the critically important first day.
-Then I give some contextual notes for each item in the script, section-by-section. These are much heavier at the beginning of the sequence, where things are probably less certain for a new instructor and more guidance would be helpful, and lighter at the end, where I hope other users of these notes will have picked up the feel of things.
+Then I give some contextual notes for each item in the script, section-by-section. These are much heavier at the beginning of the sequence, where things are probably less certain for a new instructor and more guidance would be helpful, and lighter at the end, where I hope the user will have picked up the feel of things.
 
-
+Please note that the introduction to the student version of the notes is completely different, as is the commentary text between tasks. The student version is written in my voice as advice to the students, and another instructor might want to adjust bits that feel alien.
 
 \subsection{The Nature of this Course, and How it Came to Be}
 
-idea of course: situational factors, big idea, main goals. idea of flexibility. definition wrangling, student-led conjecture work: expectation and permission\\
+This is a task sequence for a one semester course in Euclidean  geometry, designed and implemented over a decade at the University of Northern Iowa (UNI), and used more than a dozen times. UNI is a medium-sized, comprehensive, public university, with a history as a normal school and a mission focused on training pre-service teachers. 
+I have used these notes with classes ranging in size from six students to twenty-five students. As seems to be the case with many (modified) Moore Method courses, things seem to run best with about eighteen students.
 
-general non-sense goes here. philosophical advice. aims of the course. orientation stuff.  replace this later.\\
+The majority of students who enroll in this course are in a Mathematics (Secondary Teaching) major program. Usually, they are sophomores or juniors, and are still novices at finding and writing their own proofs. UNI has recently instituted a ``bridge course'' focused on proof writing, but this is not a pre-requisite for Euclidean Geometry, so previous experience is mixed. There are often transfer students who take both courses in their first semester at UNI. Most students recall that they once took a course labelled ``geometry'' in high school, but do not have much (any?) content knowledge remaining. Only occasionally do I see a student who has internalized the exploratory spirit of mathematical work before enrolling in the course.
 
-include Tim McNichol reference and idea. the coppin mahavier et al book\\
+Though the students do not really know even the most basic geometry, I do not wish to insult them by telling them so. Nor do I wish to get bogged down in building planar geometry from a modern conception of a good axiomatic system like Hilbert's\cite{Hilbert}. I do want to give them a sense of history, and to get to at least a few really beautiful theorems. To meet all of these goals at once, I use Euclid's \emph{The Elements} as a text book. I have the students read the first four books, which gets through material on congruence of triangles and polygons, constructions (especially of regular figures), properties of circles, and area. We must stop short of discussing similarity of figures.
 
-talk about Hartshorne.
+The main goal of the course is to get the students working the same way that mathematicians do. This includes the process of finding, presenting, and writing rigorous arguments, but goes further. It is important to me that the students also work at other mathematical sense-making tasks: making definitions of unclear concepts, exploring examples, formulating conjectures and questions in precise mathematical language, and critiquing the work of others both for correctness and for clarity. 
 
-ed parker, gary richter and t kyle petersen. mike starbird and carol schumacher
+The choice of Euclid as a text serves these goals, too. \emph{The Elements} has many statements which are hard to understand, many arguments which are incomplete or poorly supported by the axiomatic structure assumed, and many truly terrible definitions. This set of notes is designed to get students to critically evaluate the mathematics at every level, including Euclid's work. This is most obvious in section four where it is done explicitly. But careful reading of the notes will show many other ways in which things are not quite clearly done. (Most of these are intentional and noted in the commentary below. I am sure others remain.) One particularly nasty spot is the definition of the word \emph{polygon} at the beginning of section five. 
 
-\subsection{Class Materials}
+Rather than worry over this set of deficiencies in \emph{The Elements} and in these notes, I take the view that each such difficulty is a teaching opportunity. Students will notice gaps in arguments, trouble with definitions, possible theorems that they need but are not stated as official problems, and confusing statements. Each instance creates a need for a fix. I simply ask the students to take up the responsibility of sorting out how they think things should be, and make that part of their work. Since the students find the trouble spots, they feel like they own the mathematics when they go about setting things right.
 
-compass and straightedge, dynamic geometry software, Euclid from Green Lion Press, 
-research notebook
+This makes up an important part of the course that I think of as ``the hidden task sequence.'' Each time a trouble comes up, I challenge the students to come up with a conjecture or question and formulate it as carefully as they can. We then add that to the list of tasks to work on. A typical semester has between fifteen and twenty-five class-made questions and conjectures. I keep these in a separate list (posted on the class web site), labeled with capital roman letters. Only once I have I had to go beyond Z to AA and BB. I have included one semester's list of class-made tasks in the appendices.
+
+Another benefit of incorporating the use of student-made conjectures is that it normalizes the ordinary and common failures to mathematical work. If a student errs by making an extra hypothesis, just rephrase the theorem, and add a task to the sequence of the form ``Question X: Is Conjecture x.y still true in general?'' or something similar that seems appropriate. This happens often in the beginning of my courses, and students soon learn that ``partial progress is progress'' and that both asking good questions, and making interesting mistakes are valued.
+
+These tasks are also structured to provide some intellectual scaffolding for the process of asking questions and making conjectures. It is my experience that asking students to explore and make a conjecture is not fruitful. But asking students to explore and make a conjecture in a well-situated context with some guidance as to what a reasonable conjecture might sound like can be rewarding. One can see this happening in section two of these notes, where the process is modeled explicitly, using the results from section one.
+
+The guiding principle of the course is to mentor the students through the process of working like mathematicians do when making sense of things. I think of the students as a little community of new mathematicians, isolated from the rest of the world but with an accepted set of reference literature (\emph{The Elements}) as their foundation. As instructor, I play the role of senior scholar, trying to get the most out of each student however I can. I explain this metaphor to my students, and note that each of the pieces of a mathematician's professional work has a part in our analogy. Presenting in class is like speaking at a conference. Writing for the class journal (see below) is just like getting published.
+
+This set of tasks owes a great deal to the work of others. These are the debts that I can recall, though there are probably many others collected over the last decade.
+My introduction to inquiry-based learning, and specifically the Moore Method, was in a workshop run by G. Edgar Parker. That workshop was originally designed by Stan Yoshinobu, who I met later. I am heavily indebted to Timothy McNichol for his paper \emph{The Extreme Moore Method}\cite{mcnichol}, which I read right after that workshop. Later, I read the book \emph{The Moore Method}\cite{cmmp}, and I attended a workshop run by Carol Schumacher and Michael Starbird. Through the Academy of Inquiry-Based Learning I got mentoring from T. Kyle Petersen and Gary Richter. I also learned some things about how to construct a set of tasks by reading the text
+\emph{Number Theory Through Inquiry}\cite{nothy} by David Marshall, E.~W.~Odell and Michael Starbird.
+All of these people have influenced my teaching and the construction of this task sequence. I also recognize a debt owed to The Educational Advancement Foundation, which supported travel and participation in those workshops and several conferences.
+
+Finally, this set of notes started by appropriating the exercises at the end of chapter one in Robin Hartshorne's lovely book \emph{Geometry: Euclid and Beyond}\cite{hartshorne}. A reader familiar with that book can probably see it hiding in the bones of this task sequence, though the book simultaneously does rather more (in terms of material) and rather less (in terms of training students to do open-ended inquiry).
 
 
 \subsection{The First Class Meeting}
@@ -89,8 +102,9 @@ Here is how I run the first day:\\[.1in]
 I reassure students that they don't need to copy this down, as I will hand it out to them later.
 I also try to put them at ease with plenty of small talk about how I need to work out between semesters so that I can write so much.
 This usually spills into the first minute or two of class.
-When I am certain that the class is all present, I introduce myself briefly and ask them to try to prove the statement on the board with a partner.
-I tell them that they should just use whatever they think they recall from high school geometry.\\[.1in]
+When I am certain that the class is all present, I introduce myself briefly and ask them to try to prove the statement on the board with a partner. 
+I tell them that they should just use whatever they think they recall from high school geometry.
+This first task has been designed with several purposes in mind. There is a discussion about the different pieces of this task and their purposes following its statement below.\\[.1in]
 
 \item[\textbf{Phase II}] Now I give the students time to work in pairs.
 As they work, I walk about and introduce myself to them and learn their names one pair at a time.
@@ -98,8 +112,8 @@ Along the way I have to take a couple of questions about mathematics, but mostly
 
 \item[\textbf{Phase III}] After about twenty five minutes, someone has an argument for at least part of Conjecture 1.1.
 I call for volunteers, but if none materialize I call on a pair that I saw do something worthy.
-I invite one student to come to the board to share their ideas.
-After they get up, but before they start speaking, I interrupt and explain the basic ground rules to the class.\\[.1in]
+I invite one student to come to the board to share ideas.
+After the student gets up, but before they start speaking, I interrupt and explain the basic ground rules to the class.\\[.1in]
 
 We use only last names.
 We are polite to a fault.
@@ -111,55 +125,59 @@ Sometimes, the first presenter has a gap in their argument.
 In this case, it is important to do two things: (1) very clearly locate the error, and (2) find something of mathematical value in the presentation for which I can praise the student.
 It is best if the class locates the error.
 I try to do no more than ask if we are all in agreement.
-Finding the praiseworthy aspect of a poor presentation is sometimes challenging, but you \emph{must} authentically praise an effort at the beginning of the course for something.
+Finding the praiseworthy aspect of a poor presentation is sometimes challenging, but you \emph{must} authentically praise an effort at the beginning of the course for something.\footnote{I learned this from Ed Parker.}
 Then I bring up a second person.
-When we have a completed argument, we thank the speakers with applause.
+When we have a completed argument, we thank the speakers with applause. I mention that the presenter is now responsible for writing for the class journal, and that they should see the course web site for some information.
 Often it is the case that some students have noticed that the second claim in Conjecture 1.1 is false. If there is time, I will try to pull out of them a firm statement and argument for that claim. But sometimes this just needs to be pushed off to the beginning of the second meeting.
 \\[.1in]
 
 \item[\textbf{Phase IV}] After the speaker, I explain that this is how we shall spend all of our class time.
 I hand out the student's preface and the first section of problems (on the rhombus).
 I explain that they should try to find proofs for the rest of Conjecture 1.1 and for the next few items before the next class.
-We discuss that the point of the class is to gain power as a mathematician, and that means learning to find and defend our own arguments, so no outside sources are allowed.
+We discuss that the point of the class is to gain power as a mathematician, and that means learning to find and defend our own arguments, so the only allowed resources are \emph{The Elements}, the course task sequence, and the class journal.
 I mention that collaboration is fine, but credit must be given.
 At this point, we are usually just over time, so I let the class go with wishes for good luck.\\[.1in]
 \end{compactdesc}
 
 \subsection{Subsequent Meetings}
 
-include note about usual progress. talk about "two students with different arguments for the same result."
+Save for the day of the midterm and the final meeting, every other day of the course follows the same plan. I arrive as early as I can and chat with students as they show up. I take the first three to five minutes of class to do two things: 
+\begin{compactenum}
+\item  I briefly recap where we are in our study. For example, I might say, ``Today we continue our work on rectangles and properties of parallel lines. Last time we struggled a bit with how to use Euclid's fifth postulate, but at least saw that it was good for guaranteeing the existence of a new point.''
+\item I ask for volunteers to present and sort out who will 
+go to the board and in what order. A typical day will have between four and six presentations. Things go a little faster during the constructions.
+\end{compactenum}
 
-\subsection{On the definition of a Polygon}
+The process of turning a list of volunteers into an ordered list of presenters is both simple and delicate. It is very easy to ask for volunteers and patiently wait until the students have helped make a list of presentations for the day. As they volunteer I make a list on the chalkboard of presenters' names and task numbers. Of course, sometimes I must truly wait. The tricky business is that this is the time when I exert some control over what is going to happen in class. I get to choose who presents and in what order. Sometimes it is necessary to spur a presenter to volunteer. Sometimes I have to ask a reticent student if they have something to share even when I suspect they might not, just to remind them that this is important and I am keeping track.
 
-discussion about my loose defn of polygon.
+I am open with my students that I want to have control at this point, but they should always volunteer if they have something to share. Once I have the information about who is ready, I can make decisions about who I want to present based on whatever my teaching goals are for the moment.
 
-\subsection{Student Made Conjectures \& the missing defns}
+I should note that I encourage students to present different arguments for a single result, so if two or more students volunteer for the same item, I note all of them on my list. I choose someone to go first, and if that succeeds, I ask the others if their arguments are substantially different or not. If so, I have those students present, too.
 
-insight as to controlled conjecturing settings. basic ideas behind approach.
+When the list of presentations is set, I take a seat in the back of the class where I can see everyone, open my notes, and invite the first student to the board. We do the exercise where the student presents, the audience listens and questions, and I direct traffic. On some occasions, I have something to add, but I feel the best outcome is when the students sort things out. My job is typically to make sure the people who need to participate in a given conversation do so. When a presentation is resolved, I make a point to thank the presenter. I always thank the presenter by name. If I can, I offer praise for something specific and genuine, and if I must, I offer encouragement and empathy.
 
+We repeat this as many times as we can.
 
-making definitions, why and how. 
+It is important to view this basic template for class meetings as just that, a template. Think of it as a basic form of interaction that gives everyone in the room a structure to work in. But if it ever feels constraining, or somehow insufficient for the learning to be done, I get to my feet and make up something else. The truly important thing is that the students are working through their own understanding of mathematics. I do what I think works in the moment.
 
-include discussion of my very broad definition of a polygon.
-
-euclid's definitions are sometimes crappy:
-1. "point" really?
-2. rhombus vs square vs rectangle
-
+Finally, I want class to end with a short recap of significant new happenings. I will not pretend that this goes smoothly, because many days end with a presenter in a hurry to finish a thought. But I take pains to say something about the progress made, and perhaps preview a new idea or set of tasks on the horizon.
 
 
 
 \subsection{Assessment}
 
-daily work: specs approach. exams. assessment interviews.\\
+The most important assessment mechanism in my course is the collection of daily presentations. Through them, I do a weird jumbled and intertwined mix of formative and summative assessment. In the moment, I prefer to work with it as formative assessment. But by the time the term is over, I have watched the students work with mathematics for months, and I have formed an idea about their capabilities. I find it is not difficult to render a professional judgement about those capabilities and decide upon a course grade. But that does not involve a great deal of paper, and it feels rather uncertain to some students. 
 
+So I have devised another system on top of merely watching and interacting that provides for more formal communication with students about their progress. 
 
-I give one midterm examination and a final exam.
+First, I share with the students a list of \emph{Standards for Assessment}. These are a public declaration of the kinds of things I will be looking at during the course.
+
+Second, I give \emph{one midterm examination} and \emph{a final exam}.
 The midterm examination is in-class, and must be very focused.
 I tend to pick four questions that get at important mathematical skills I might not have seen everyone perform, yet.
 I usually only include one new argument, and it should be an adaptation of an argument that the students have seen more than once.
 There simply is not time in a fifty minute exam to ask for several proofs of new statements.
-An example is at the end of this guide.
+An example midterm is at the end of this guide.
 
 The final examination is a week-long take-home.
 I again ask four or five questions, each of which is new to the students.
@@ -170,16 +188,85 @@ This is the challenging part of the exam: to notice the error, prove it is an er
 If I have a question if a student deserves an A, quality work on this problem can change my mind.
 An example exam is at the end of this guide.
 
+Third, I schedule \emph{Assessment Interviews} with my students at three different times during the semester. I like to have these during weeks three, seven, and eleven. Each meeting is a twenty minute appointment where I can talk with a student one-on-one about their course progress. To give the conversations some focus, I ask the students to do a one page \emph{reflective writing assignment} before the meeting.
+In the first meeting I mostly try to take away student anxiety about the nature of the course by being personable and getting to know them a little. I also give advice about work habits and encourage them to come back to talk about mathematics or their progress whenever they wish. In the second meeting students start asking about their progress more directly, and I often give advice about what skills to work on next. In the third meeting students usually take the opportunity to ask about grades specifically. In this way, I can address their concerns and share frank assessments in a private discussion.
+
+In the end, a student who earns an A usually solves eight to ten tasks, including some difficult ones. A student who earns a C usually solves three tasks, all of low difficulty.
+
+\subsection{Class Materials}
+
+I ask the students to obtain the following materials for this course:
+\begin{compactitem}
+\item A copy of Euclid's \emph{The Elements}. I prefer the edition by the Green Lion Press\cite{Euclid} because the text is well-made, with figures reprinted on new pages when arguments continue. This edition uses the standard translation by Sir Thomas Heath, but does not include the commentary common to other editions. The commentary would dispel too many mysteries for this course.
+
+This text and the task sequence are the complete set of allowed references for the course. 
+
+\item A research notebook. Any style will do, as long as it is dedicated to this course.
+\item A compass and straightedge for drawing. Strictly speaking these are not required, but students will want them.
+\end{compactitem}
+
+Though it is not a required purchase, I also advise students of the existence of the dynamic geometry software package \emph{GeoGebra}.\cite{GGB}
+
 
 \subsection{Course Web Site \& The Class Blog}
+
+I maintain a simple web site for each iteration of my course. Firstly, this serves as a repository for course documents. This includes a link for the syllabus and links for other course documents about grading and the class journal, and I use this as the method to distribute new sections of the task sequence. The task sequence is divided into sections of related tasks, which I release a section at a time.
+
+Also, I keep a class blog (on the same web page) about developments. Each day after class I take ten minutes to write a short post about what happened. I include statements of theorems proved and note who has credit for them. I also write up any new conjectures or questions that came up during that meeting.
+
+The blog serves as a useful record of events for students who have to miss a day, and as a way for students and instructor alike to keep track of what tasks are currently open.
+
+My particular web page is open on the internet, though it is secured by its obscurity. Only current students have any interest in its contents. At the conclusion of each semester, I archive all of the old blog posts and class journal issues and reset the page to avoid spoiling things for the next class.
 
 
 \subsection{The Class Journal}
 
-[[reference to paper about class journal in maa notes]]
+As part of the basic structure of the course, I run a class journal.\footnote{I have written about this elsewhere. It is to appear as \cite{MAANOTES}.}
+A student who completes a task to the satisfaction of the class then is charged with writing up the result for publication. 
 
+I provide the students with a \LaTeX\ template and lots of written guidelines for preparing their papers. They submit papers to me (as the managing editor) through a dedicated email address. Each paper goes through a review and revision cycle as many times as required to get it into a reasonable shape. At first, I play the role of referee and write up little referee reports for each paper. I play referee for each student's first two papers. Later in the term, I ask the students who have two or more published papers to help out and play referee. Again, I provide the students with lots of written guidelines for being a referee. If things are going well, I often turn over the refereeing completely by week ten or eleven. 
+
+The whole process has to be explained to the class two or three times for everyone to get the big picture. I find it helps to explain that this is how professionals do it, too, and why it is important.
+
+Every few weeks, I bundle together those papers which are finished and make an issue of the class journal to publish. One copy goes on the course web site as an electronic document. I make paper copies for those authors with a paper appearing and distribute them at the start of the next meeting.
+
+I have included several of the documents I use in the appendices.
+
+\subsection{Other Advice, in No Particular Order}
+
+I always stick to using last names in class. Students are ``Mr. Smith'' and ``Ms. Gonzalez.'' I ask the students to do this, too. This formality helps reinforce the basic dignity of each student and sets a floor for the level of respect we show to each other.
+
+Of course, my students are mostly ``Iowa Nice,'' and my biggest challenge is not polite behavior. Rather, I have to encourage my students to ask tough questions and to admit confusion publicly.
+
+My class does not usually finish all of these tasks. Most semesters the students are working hard on sections 14 or 15 as class ends, with about ten unfinished items from earlier in the term hanging around.
+
+I find the best learning results from respecting the students and their ideas. When I follow their lead and help them develop their own arguments, students can be spectacularly creative. It is common for me to be surprised by a new (to me)  and correct argument for a challenging theorem. I want to be mentor, cheerleader, and coach, and I must sometimes play counselor. I want to avoid being ``the smart guy in the room.''
+
+This course is demanding. It is important to remember that students just get tired and bogged down at certain times of the semester. When this happens, I make up some way for us to be productive even if there are no presentations to be made. I ask a lot of my students, and they let me do it as long as I show empathy.
+
+It is not unusual to have an extra five minutes. I use these as opportunities to give a mini-lecture on something related to the course. I find I use these topics frequently.
+\begin{compactitem}
+\item The axiomatic method, and how it distinguishes mathematics from science.
+\item Euclid's postulates and their structure.
+\item The history of the fifth postulate.
+\item Some hyperbolic geometry basics.
+\item The nature of a mathematical definition, and how such is different from a regular definition in a natural language.
+\item What else is hiding in \emph{The Elements}.
+\item A question that I am working on right now.
+\item Some different ideas about what counts as geometry (differential geometry, metric geometry, algebraic geometry, etc).
+\end{compactitem}
+
+I do not, as a rule, tell the students when they have made an error. I do model asking questions sometimes. I often call on a student in the audience and ask them to ask a question, or to restate an argument in their own words. I spend a lot of time play-acting like I am confused until the students are clear about details. I do this to normalize the the idea that one can be good at mathematics and confused at the same time, and to reinforce that it is up to the students to get things right. If an error happens and the class accepts it, I wait to see if it gets resolved during the publication process, or I find a way to add a task to the sequence that should make the error apparent. 
 
 \subsection{The Final Meeting}
+
+The last day of class runs slightly differently than the rest. It often starts the usual way, with gathering of volunteers and a few last presentations. But I reserve the last twenty minutes for a conclusion.
+
+First, I discuss with them what should come next. I talk to them about the other geometry courses offered which they might include their program. I also share with them the titles of some wonderful books they might read about geometry when the semester is over. For effect, I load a dozen or so of these previously-forbidden fruits into a big shopping bag and bring them out one-by-one as I talk about them, laying them on the table in front of me.
+
+Next, I distribute the final exam. I read the instructions and give them five minutes to read through the tasks to be sure everything is clear. 
+
+Finally, I thank them for a good semester, ask them to preserve the experience for future classes, and wish them luck.
 
 \clearpage
 \setcounter{section}{1}
@@ -507,7 +594,7 @@ A \emph{polygon} is an $n$-gon where $n$ has not been specified.
 \marginnote[-20pt]{Note: Commonly used terminology includes the following: 3-gon = triangle, 4-gon = quadrilateral, 5-gon = pentagon, 6-gon = hexagon.}
 \end{definition}
 
-This definition is very open, and intentionally so. In fact, it introduces a conflict with the notion of a quadrilateral from earlier in the notes, in that a $4$-gon can have three collinear vertices. And there is still the problem of non-convex and non-simple figures. My students quickly become dissatisfied with the state of affairs and we end up having class conversations about what they believe to be a polygon and what they do not. I choose students to lead these conversations, and intentionally stay out of the way. It can take several days. I am careful to direct traffic by having the students pass the chalk around as the conversation moves, and I will jump up at some point and ask the students to make as many crazy examples as they can think of to show why the stated definition is not a good one. From this conversation should come several class-made conjectures and questions, now that we are really at the heart of the matter. Students will arrive at concepts like the following quite naturally:\begin{itemize}
+This definition is very open, and intentionally so. In fact, it introduces a conflict with the notion of a quadrilateral from earlier in the notes, in that a $4$-gon can have three collinear vertices. And there is still the problem of non-convex and non-simple figures. My students quickly become dissatisfied with the state of affairs and we end up having class conversations about what they believe to be a polygon and what they do not. I choose students to lead these conversations, and intentionally stay out of the way. This can take several days. I am careful to direct traffic by having the students pass the chalk around as the conversation moves, and I will jump up at some point and ask the students to make as many crazy examples as they can think of to show why the stated definition is not a good one. From this conversation should come several class-made conjectures and questions, now that we are really at the heart of the matter. Students will arrive at concepts like the following quite naturally:\begin{itemize}
 \item What do we mean by a ``convex'' polygon?
 \item What do we mean by a ``simple'' polygon?
 \item What does it mean for two points to ``lie on one side'' of a
@@ -1118,7 +1205,7 @@ Once, I had an extra day and cooperative weather, so I took the students outside
 \clearpage
 \section{Appendix: Supplementary Documents}
 
-syllabus, student conjectures list from fall 2015, exams from fall 2015, reflective writing prompts, specs/standards docs, writing info docs, conclusion handout
+syllabus, specs/standards docs, reflective writing prompts,  writing info docs, student conjectures list from fall 2015, conclusion handout, exams from fall 2015
 
 
 
